fix: remove zero z-index property

--- a/src/_sass/pages/_docs.scss
+++ b/src/_sass/pages/_docs.scss
@@ -19,7 +19,6 @@
 
   &__navbar {
     position: relative;
-    z-index: 0;
     padding: 16px 40px;
     display: none;
 
